@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-03T00:43:13Z",
-  "count_outdated" : 4434,
-  "uniques_outdated" : 2184,
+  "timestamp" : "2024-09-04T00:43:58Z",
+  "count_outdated" : 4435,
+  "uniques_outdated" : 2185,
   "count" : 4461,
   "uniques" : 2211,
   "clones" : [
-    {
-      "timestamp": "2024-08-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-08-23T00:00:00Z",
       "count": 4,
