@@ -1,12 +1,7 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 22,
   "clones": [
-    {
-      "timestamp": "2024-08-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-08-23T00:00:00Z",
       "count": 4,
